############################

NEXT (In development)
+++++++++++++++++++++

IMPROVEMENTS
------------

* ``testr last`` when just one test run has been run works again.
  (Robert Collins)

* ``Repository.get_test_run`` now raises KeyError if asked for a missing or
  nonexistant test run. (Robert Collins)

* ``testr run`` will now fail a test run if the test process exits non-zero.
  (Robert Collins)

0.0.7
+++++

CHANGES
-------

* testrepository is now distributed via distribute rather than distutils,
  allowing installation via pip into virtualenv environments. (Robert Collins)

IMPROVEMENTS
------------

* stream loading will now synthesise datestamps before demultiplexing rather
  than on insertion into the repository. This fixes erroneously short times
  being recorded on non timestamped streams. Additionally, moving the automatic
  addition of timestamp material in front of the demuxer has removed the skew
  that caused test times to be reported as longer than the stream could
  indicate (by the amount of time the test runner took to start outputting
  subunit). This time may be something we want to track later, but the prior
  mechanism was inconsistent between the current run and reporting on prior
  runs, which lead to a very confusing UI. Now it is consistent, but totally
  ignores that overhead.
  (Robert Collins, #1048126, #980950)

* ``testr run`` now accepts a --concurrency option, allowing command line
  override of the number of workers spawned. This allows conccurency on
  operating systems where autodetection is not yet implemented, or just
  debugging problems with concurrent test suites. (Robert Collins, #957145)

* ''test_id_list_default'' would prevent ''test_list_option'' being used in
  previous releases. For Python environments where the context to load tests
  from is always needed this was not an issue (and thus not uncovered). However
  given a test runner which wants either a global context or a list of specific